kubernetes/common/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cranecloud-ingress
  namespace: cranecloud
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: cc-staging
spec:
  
  rules:
  - host: staging.cranecloud.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: cranecloud-frontend
          servicePort: 80

  - host: staging-api.cranecloud.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: cranecloud-backend
          servicePort: 80
